--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -12,21 +12,21 @@ type: main
 os: ubuntu@12.04
 script: |-
   # --- Install Base Packages 
-  apt-get update
-  apt-get install python-software-properties curl wget -y
+  sudo apt-get update
+  sudo apt-get install python-software-properties curl wget -y
   # --- Install Java 8
-  add-apt-repository ppa:webupd8team/java -y
-  apt-get update
+  sudo add-apt-repository ppa:webupd8team/java -y
+  sudo apt-get update
   echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | sudo /usr/bin/debconf-set-selections
-  apt-get install oracle-java8-installer -qq
-  apt-get install oracle-java8-set-default -y
+  sudo apt-get install oracle-java8-installer -qq
+  sudo apt-get install oracle-java8-set-default -y
   # --- Install Ansible
-  add-apt-repository ppa:rquillo/ansible -y
-  apt-get update
-  apt-get install ansible -y
+  sudo add-apt-repository ppa:rquillo/ansible -y
+  sudo apt-get update
+  sudo apt-get install ansible -y
   # --- Install Gradle
-  add-apt-repository ppa:cwchien/gradle -y
-  apt-get update
-  apt-get install gradle -y
+  sudo add-apt-repository ppa:cwchien/gradle -y
+  sudo apt-get update
+  sudo apt-get install gradle -y
   # --- Install goplay
-  curl https://github.com/naa-aasat/goplay/releases/download/v0.1.3/goplay-v0.1.3-linux-amd64.tar.gz | tar -zxv -C /usr/local/bin/ goplay
+  curl https://github.com/naa-aasat/goplay/releases/download/v0.1.3/goplay-v0.1.3-linux-amd64.tar.gz | sudo tar -zxv -C /usr/local/bin/ goplay
